# cpaa

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
