[tool.poetry]
name = "code-prompt-ai-api"
version = "0.1.0"
description = ""
authors = ["Marco Antonio Gonzalez Junior <m@rco.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
